# UAV-Simulator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  Doxyfile  README.md  UAVSystemAdapter_8h__incl.map  UAVSystemAdapter_8h__incl.md5  UAVSystemAdapter_8h_source.html  aircraft.cpp  aircraft.h  aircraft_8cpp.html  aircraft_8cpp__incl.map  aircraft_8cpp__incl.md5  aircraft_8h.html  aircraft_8h__dep__incl.map  aircraft_8h__dep__incl.md5  aircraft_8h__incl.map  aircraft_8h_source.html  annotated.html  annotated_dup.js  classAircraft-members.html  classAircraft.html  classAircraft.js  classGNC-members.html  classGNC.html  classGNC.js  classGNC__coll__graph.map  classGNC__coll__graph.md5  classLineSegment.html  classLineSegment.js  classLineSegment__coll__graph.map  classLineSegment__inherit__graph.md5  classPath-members.html  classPath.html  classPath.js  classPathSegment.html  classPathSegment__inherit__graph.map  classSimViewer-members.html  classSimViewer.html  classSimViewer.js  (+238 more)
.github/workflows/: doxygen.yml
assets/: terrain3c.stl  terrain3d.stl  uav_blender.stl  y_for_z_up_uav2.stl  y_for_z_up_uav2_2000.stl  y_for_z_up_uav2_3000.stl
data/: data.txt
docs/html/: README_8md.html  UAVSystemAdapter_8h.html  UAVSystemAdapter_8h.js  aircraft_8cpp.html  aircraft_8cpp__incl.map  aircraft_8cpp__incl.md5  aircraft_8h.html  aircraft_8h.js  aircraft_8h__dep__incl.map  aircraft_8h__dep__incl.md5  aircraft_8h__incl.map  aircraft_8h__incl.md5  aircraft_8h_source.html  annotated.html  annotated_dup.js  classAircraft.html  classGNC-members.html  classGNC.html  classGNC.js  classGNC__coll__graph.map  classLineSegment-members.html  classMissionManager-members.html  classMissionManager.html  classMissionManager.js  classPath.html  classPathSegment-members.html  classPathSegment.html  classPathSegment.js  classPathSegment__inherit__graph.map  classPathSegment__inherit__graph.md5  classSimViewer-members.html  classSimViewer__inherit__graph.map  classTrimSolver-members.html  classTrimSolver.html  classTrimSolver__coll__graph.md5  classUAVSystemAdapter.js  classWaypointList.html  classeasy3d_1_1ViewerImGui.html  classeasy3d_1_1ViewerImGui__inherit__graph.md5  common_8h.js  (+157 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_3.js  classes_4.js  classes_8.js  files_4.js  files_5.js  files_7.js  files_b.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_b.js  functions_c.js  functions_e.js  pages_2.js  searchdata.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  (+11 more)
include/: UAVSystemAdapter.h  common.h  gnc.h  line_segment.h  path_segment.h  world.h
include/aircraft/: aircraft.h
include/gnc/: gnc.h  path.h
include/rendering/: simviewer.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  files_0.js  files_2.js  files_3.js  files_4.js  files_7.js  (+33 more)
src/: main.cpp  path.cpp  simulator.cpp  trim_solver.cpp  viewer_imgui.cpp
src/aircraft/: aircraft.cpp
src/gnc/: gnc.cpp  line_segment.cpp  mission_manager.cpp  path.cpp  waypoint_list.cpp
src/rendering/: simviewer.cpp  viewer_imgui.cpp  world.cpp
